--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">My App Portfolio</string>
 
-    <string name="title">My Nanodegree Apps</string>
+    <string name="title">My Nanodegree Apps!</string>
     <!-- button messages-->
     <string name="spotify">Spotify Streamer</string>
     <string name="scores">NBA Scores</string>
